--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -551,8 +551,18 @@ This chapter has explored the complexity of the interacting tools and documentat
 HAS IT?
 REVISIT RESEARCH QUESTIONS
 
+
+
 The next section begins a synthesises the features of the design narrative, existing research, specifically UMC, half-baked approach and constructionist design principles. To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
 
+
+**on dynamics of mutual process**
+THE PROCESS WAS OPEN, RISKY, BUT VERY PRODUCTIVE.
+I was lucky to have a group in P1 as tenacious as that, and I also benefited by building on previous work.
+
+MOVE SOMEWHERE OR ADD SOMETHING ELSE TO CELEBRATE THIS PROCESS
+One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
+INTGRATE THE ABOVE
 
 The emergent and mutual nature of this design process align with both DBR and CHAT principles. In this and the previous chapter I have described my active role to motivate and support an emerging community in iterative phases. I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research. The term affordances has been well explored in the literature of HCI from a CHAT perspective, as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927]. In 3GAT terminology, the affordances of my design would be terms as a series secondary stimuli. Sannino's work draws our attention to the intersection of the use of secondary stimuli by participants and volitional action or agency of participants.
 
@@ -648,16 +658,10 @@ In P1 GDPs identified via playing games as part of an activity adapted from Move
 And used in list of features used as a mediating planning tool.
 
 In P2 GDPs were incorporated as affordances into a starter game template in line with Microworld pedagogical principles
-- GDPs as quick start cards designrd to scaffold modification of code template
+- GDPs as quick start cards designed to scaffold modification of code template
 - GDPs used in response  participant  requests for new features they wanted to add to their games resulting  as a menu of GDPs as documentation and code examples to facilitate creation of new code
 
-
-The data gathered showed that while many were at a level of making changes to personal code projects others were more to do with interaction in an emerging culture of this community of game makers.
-
-**Comparing to Stepwise approaches**
-
 OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
-
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
@@ -665,33 +669,26 @@ While the scope of this study is not on the micro-level of tool use, it is usefu
 
 ### Summary and link to next chapter/s
 
+**Synthesis effect of UMC + collection of GDPS on agency**
 
-#### Synthesis effect of UMC + collection of GDPS
+My observations indicated that the combination of the use of a template and a collection of GDPs via a guided approaches had an accelerated effect on a specific set of coding fluency practices. This, in turn, had subsequent impact on the increase use of social coding processes.
 
-The use of  design decisions aligned with the principles above had a knock on effect on the increase use of social coding processes.
-
-I prose in particular that the use of a template and a collection of GDPs via a guided approaches had an accelerated effect on a specific set of coding fluency practices.
-
-This instrumental proficiency was required before the rich set of  interaction based on peer learning, and other social coding processed could emerge in playtesting practices.
-
-Thus instrumental agency can be seen as the base of a triangular hierarchy of agency  One level may  needs to be built on the other.
+This instrumental proficiency was required before the rich set of  interaction based on peer learning, and other social coding processed could emerge in playtesting practices. While a simple point, Matusov's typology of agency, omits to state that instrumental agency can be seen as the base of a triangular hierarchy of agency, in other words that other dimensions of agency may needs to be built on this one.
 
 <!-- LATER? My choices balanced the value of positive engagement of asset creating, development of digital literacy skills associated with web production, and a focus on promoting code modification.   -->
 
-Agency in this learning process was present via the input of participants in the changing design of the program. At times through direct requests, at times through my responses to behaviours demonstrating their needs and motivations. Playtesting as a process and the use of GDPs in varied ways by participants was noticed and I added more affordances designed to facilitate these aspects. Affordances here as a form of delegated agency.
+Relational agency developed via Playtesting as a process and the use of GDPs in varied ways by participants was noticed and I added more affordances designed to facilitate these aspects.
+In addition, design  affordances here as a form of delegated agency.
 
-Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
+Authorial Agency in this learning process was present via the input of participants in the overall design of the program.
 
+
+
+**Signposting**
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results research from the constructionist school.
 
-
-THE PROCESS WAS OPEN, RISKY, BUT VERY PRODUCTIVE.
-I was lucky to have a group in P1 as tenacious as that, and I also benefited by building on previous work.
-
-MOVE SOMEWHERE OR ADD SOMETHING ELSE TO CELEBRATE THIS PROCESS
-One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
-
+Chapter 7 explores the delivery and start to explore the impact of the and emerging community processes on cultural dimensions of the game making activity on participants development of agency.
 
 The next chapter explores the varied uses of a gameplay design patterns. In this study the patterns take the form of working with common game elements game design patterns.
 
