--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -24,48 +24,17 @@ title: 5. Exploration of the Formative Learning Design Process
             tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
             -   [Using a starter game template within a code
                 playground](#using-a-starter-game-template-within-a-code-playground)
-            -   [Creating key affordances](#creating-key-affordances)
-                -   [Use of game assets](#use-of-game-assets)
-            -   [Resolution of C1 / LINK](#resolution-of-c1-link)
         -   [C2 - Contradictions associated with project navigation and
             use of
             documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [Description of contradictions related to
-                documentation](#description-of-contradictions-related-to-documentation)
             -   [Forms of Documentation which addressed
                 contradictions](#forms-of-documentation-which-addressed-contradictions)
-                -   [Quick Start Cards](#quick-start-cards)
-                -   [Structuring instructional tutorial resources and
-                    code
-                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
             -   [Resolution of C2](#resolution-of-c2)
         -   [C3 - Responding to tensions and barriers in cultural
             aspects of the game making
             activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
             -   [Social coding processes](#social-coding-processes)
-                -   [Remixing, peer learning, and choice of starting
-                    template MERGE
-                    UP](#remixing-peer-learning-and-choice-of-starting-template-merge-up)
-                -   [Use of side missions to encourage varied creative
-                    practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [On Affordances, DS and DBR ( using the argumentative
-            grammar of 3GAT /
-            DBR)](#on-affordances-ds-and-dbr-using-the-argumentative-grammar-of-3gat-dbr)
-            -   [Comparing to Microworlds & constructionist design
-                priniciples](#comparing-to-microworlds-constructionist-design-priniciples)
-            -   [The potentially awesome impact of lifting the lid on
-                authentic technologies
-                -](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies--)
-        -   [Rising to the concrete - the emergence of GDPs as a germ
-            cell of
-            activity](#rising-to-the-concrete---the-emergence-of-gdps-as-a-germ-cell-of-activity)
-            -   [Synthesis effect of UMC + collection of
-                GDPS](#synthesis-effect-of-umc-collection-of-gdps)
-            -   [and what this synthesis has to say about participant
-                agency - OR MOVE
-                UP?](#and-what-this-synthesis-has-to-say-about-participant-agency---or-move-up)
-        -   [Link to next chapter/s](#link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
             -   [MOVED LINK - Applying activity theory to surface
@@ -74,35 +43,55 @@ title: 5. Exploration of the Formative Learning Design Process
                 facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
             -   [Notes from vignette](#notes-from-vignette)
             -   [Notes before C1](#notes-before-c1)
+            -   [Dropped from Discussion](#dropped-from-discussion)
+
+
 # Exploration of the Formative Learning Design Process
 
-## Research Questions - April 2024
 
-~1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?~
+This chapter contains some headings in draft form. These will be replaced with introductory sentences when structure is stable.
 
-1. What ~barriers~ areas of contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
-2. How can game design patterns support the development of coding practices with novices?
+## Research Questions - To discuss...
+
+**2023 question one version**
+
+1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
+
+**Research Questions - July 2024**
+
+1. What contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
+2. How can game design patterns support the development of computational fluency in novices?
 3. How can learners build agency in an evolving community of game makers?
 
+**New - later 2024 question version / proposal**
 
+1. How can game design patterns support the development of computational fluency in novices?
+2. How can learners build agency in an evolving community of game makers?
+
+Just drop one? Or bring back a more general question which the lit review also answers?
+
+3. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
+
+<!--
 *A note on style*
 
-This chapter contains a large number of headings in draft form. These will be replaced with introductory sentences when structure is stable.
-
+This chapter contains a large number of headings in draft form. These will be replaced with introductory sentences when structure is stable. -->
 
 
 ## Chapter Introduction  
 
-This chapter contains a high level of detail on the evolution of the learning design to situate the findings of the next chapters and to allow the design to be by other practitioners and researchers in this area. The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002-1]. To do to this I include narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged within DBR as a way to communicate the important detail of context [@hoadley_creating_2002-1; @brase_knowledge_2024; @bell_theoretical_2004]. In line with discussion of Chapter 3, this process is augmented by adding argumentative grammar of formative interventions prposed by the Helsinki school.
+The format of this chapter can be conceived as a design narrative [@hoadley_creating_2002-1], consisting of narrative descriptions of shifts between phases of design as it mutually evolved over time. The concept of design narrative emerged within DBR as a way to communicate the important detail of context to situate the findings of the next chapters and to allow the design to be by other practitioners and researchers in this area. [@hoadley_creating_2002-1; @brase_knowledge_2024; @bell_theoretical_2004]. In line with discussion of Chapter 3, this process is augmented by adding argumentative grammar of formative interventions within the Helsinki school's interpretation of third generation activity theory (3GAT).
 
 <!-- MOVE TO INTRODUCTION  
 This chapter uses the argumentative grammar of DBR and CHAT  approaches to aid discussion of the evolution of the learning design and situate the findings and analysis of following chapters. -->
 
 <!-- In particular, the evolution of the key pedagogical features is analysed via  emerging tensions between system elements in learning design. Exploration of the shifts in the design of the intervention is done via a development of a design narrative which explores the driving forces behind changes in the design of each phase. -->
 
-In Chapter 4 I described phases of delivery of the formative intervention in the form of a family game making programme. To begin this chapter I describe activity by identifying activity units/systems, system elements and the complex nature of the object of activity at two scopes of activity using the context of vignette. I then take a wider focus including technical and social observations from my research journal, additional session notes, and analysis of created artefacts of games and documentation to continue the design narrative via an in-depth analysis of three key areas of emerging areas of contradictions in activity and resultant interventions which addressed those contradictions. The three main areas of contradictions are explored in this chapter are as follows: in use of software tool use in P1 and P2, those associated with project navigation and the use of supporting documentation in P2, and finally contradictions surrounding participant identity within the game making activity.
+In Chapter 4 I described phases of delivery of the formative intervention in the form of a family game making programme. This chapter builds on description via an identifying and analysis of activity systems at different scopes, their inherrent system elements and the a detailed interpretation of their objects  of activity. To help ground the reader in a concrete detail this is undertaken using the context of vignette included as Appendix 5.toby.
 
-The discussion section of this chapter begins a synthesis of concrete issues arising in the evolution of the learning design drawing on key foci of 3GAT namely, double stimulation and its relation to participant agency, and the process of rising to the concrete through exploration of a germ cell concept (in the form of implementation of gameplay design patterns).
+Following this are three section of in-depth analysis of three areas of contradictions in the emergent activity and the resultant interventions to address those contradictions. The three areas of contradictions explored are those: in use of software tool use in P1 and P2; those associated with project navigation and the use of supporting documentation in P2; and contradictions surrounding participant identity within the game making activity. Each section advances the design narrative by drawing on technical and social observations from my research journal, additional session notes, and analysis of the created artefacts of games and documentation.
+
+The discussion section of this chapter begins a synthesis of concrete issues arising in the evolution of the learning design using the 3GAT and DBR concepts: specifically, an iterative and mustual design process; double stimulation and its relation to participant agency; and the process of rising to the concrete through exploration of a germ cell concept in the from of the use of gameplay design patterns.
 
 
 ## Vignette and broad analysis using an analysis of activity systems
@@ -551,18 +540,9 @@ This chapter has explored the complexity of the interacting tools and documentat
 HAS IT?
 REVISIT RESEARCH QUESTIONS
 
-
-
 The next section begins a synthesises the features of the design narrative, existing research, specifically UMC, half-baked approach and constructionist design principles. To do this it employs an argumentative grammar fusing elements of DBR and CHAT concepts: specifically iterative processes, analysis of emerging tensions between systems elements, focus on affordances and secondary stimuli (particularly in relation to participant agency), and the process of rising to the concrete through exploration of a germ cell concept.
 
-
-**on dynamics of mutual process**
-THE PROCESS WAS OPEN, RISKY, BUT VERY PRODUCTIVE.
-I was lucky to have a group in P1 as tenacious as that, and I also benefited by building on previous work.
-
-MOVE SOMEWHERE OR ADD SOMETHING ELSE TO CELEBRATE THIS PROCESS
-One of my central proposals regarding the methodology of this thesis is that while under-explored in this area, there is great potential in collaborative design based approaches to uncover situated and emergent practices in a way that can help seed community activity by other facilitators.
-INTGRATE THE ABOVE
+Addressing the replicability of the research process, it is of value here to recap the previous chapters characterision of its nature as as open and risky, and requiring me to rapidly generate new tools in response. Certain factors mitigated against the incomplete design, namely a tenatious group of participants in P1, and my existing relationship with some participants built in previous encounters. The input of families as a responsive testing group and as detailed above, as active inputters to the evolving pedagogical approach was significant. As such, while this aspect is not extensively explored in this study, I propose there is significant potential in the input of home educating families as a consituant part in collaborative design based approaches to  uncover exisiting, situated repetoires in a way that can shape emergent practices in new learning expereiences. Specifically potential to can inform design  to produce tools and pedagogies aims which can help other facilitators seed productive community activity in other learning settings. I return to this subject in the conclusion of this thesis.
 
 The emergent and mutual nature of this design process align with both DBR and CHAT principles. In this and the previous chapter I have described my active role to motivate and support an emerging community in iterative phases. I have designed, introduced and revised a technology based set of tools in a process aligned with broad definitions of DBR.  In addition to the affordances of technical tools, I have introduced learning activities as pedagogy strategies which can be seen as affordances, an approach also aligned with DBR research. The term affordances has been well explored in the literature of HCI from a CHAT perspective, as 'technology affordances as possibilities for human actions mediated by cultural means' [@kaptelinin_affordances_2012, p.927]. In 3GAT terminology, the affordances of my design would be terms as a series secondary stimuli. Sannino's work draws our attention to the intersection of the use of secondary stimuli by participants and volitional action or agency of participants.
 
@@ -589,7 +569,6 @@ and in the application of research on UMC literature research in:
 -  the use of a working template build familiarity with the code structure and use of tools in an accelerated way.
 - a  structured approach in for participants in use and modify stages where key affordances were highlighted in the code design.
 -  the careful design of stages of participant interaction with code via guiding documentation terms of quick start cards and a participatory creation of a menu of gameplay design patterns.
-
 
 
 INTEGRATE  
@@ -638,36 +617,23 @@ Conversely, a significant drawback of using a bespoke tool for novices is that a
 <!-- Aligned with the general principles of PBL [@hung_engaged_2006], this design has strived for authenticity in varied forms. Authenticity in terms of activity object here is multiple in dimension, e.g in audience, in tool use and in creative processes. While the impact of the authentic dimensions of the tools and process described in this chapter 7 in depth, this section outlines some of the rationale of design descriptions in relation to existing research. -->
 
 
-### Rising to the concrete - the emergence of GDPs as a germ cell of activity
+**Rising to the concrete - the emergence of GDPs as a germ cell of activity**
 
 The process of rising to the concrete via a germ cell concept,  while not seen as a requirement for formative interventions [Sannino etc], it is seen as powerful in potential. To seek it, the researcher engages in an exploration of complex, messy concrete processes is undertaken over time to try to discern overarching concerns which can be expressed as a prototypical abstract germ cell concept.
 
 <!-- NOTE Blunden and Engestrom's disagreement about unit of analysis -->
 
-For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes, (and are also the topic of Chapter 6.)
+For this learning design, the concept and pedagogy of working with game design patterns emerged not only as an object of activity on a more granular scope than typical, but also as guiding germ cell concept which helps participant and facilitators. In the discussion below, GDPs are noted in their use in step-wise instruction processes. Using terminology outlined by Denner et al. [@denner_does_2019], the P1 to P2 shift saw a move from a design-build-test to a stepwise approach. Step wise approaches comprises broadly of a fundamental coding approach which is introduced in simplistic, proto-typical format for learners to experience and explore, and which is then replaced by a more advanced model or more complicated instance of the task.
 
-For facilitators, GDPs can help communicate and package useful tools and processes.
+Thus while the initial use of GDPs in P1 was piecemeal, by P2, a more structured, step-wise approach was present for participants. This following summative narrative outlines of the use of GDPs which were introduced as part of several guiding activities. In P1 GDPs identified via playing games as part of an activity adapted from Moveable Game Jams (check this is described or linked to) and used in list of features used as a mediating planning tool. In P2 GDPs were incorporated as affordances into a starter game template  highlighted first via facilitator interaction and then as the guiding priniciple of _quick start cards_ to scaffold modification of code template.  The sructure of documentaiton  created in response to participant requests to add new GDPs to their games evolved from a piecemeal in P1 to by the end of P2 as a menu of GDPs code snippets and accompnying instructional documentation.
 
-Within the terminology outline by Denner et al. [@denner_does_2019], the P1 to P2 shift saw a move from a design-build-test to a stepwise approach. Step wise approaches comprises broadly of a fundamental coding approach which is introduced in simplistic, proto-typical format for learners to experience and explore, and which is then replaced by a more advanced model or more complicated instance of the task.
-
-Thus While the initial use of GDPs in P1 was piecemeal, by P2 a more structured, step-wise approach was present for participants
-
-This following summative narrative outlines of the use of GDPs, which were introduced as part of several guiding activities. These include:
-
-In P1 GDPs identified via playing games as part of an activity adapted from Moveable Game Jams
-And used in list of features used as a mediating planning tool.
-
-In P2 GDPs were incorporated as affordances into a starter game template in line with Microworld pedagogical principles
-- GDPs as quick start cards designed to scaffold modification of code template
-- GDPs used in response  participant  requests for new features they wanted to add to their games resulting  as a menu of GDPs as documentation and code examples to facilitate creation of new code
-
-OPEN THE DOOR HERE - AND POINT TO THE NEXT CHAPTER RATHER THAN TACKLING IT ALL.
+In line with understandings of DBR research outputs, the identification and use of these patterns as research findings would be expressed a set of "tentative generalisations" in the form of design heuristics drawn from analysis of concrete practices [@hoadley_design-based_2022, p.215]. Similarly, I propose the orienting practice of GDPs as tentative candidate for a germ cell concept. I continue analysis of this proposition in the following chapter.
 
 <!-- NOTE - DROP - MAKE MORE DIRECT
 While the scope of this study is not on the micro-level of tool use, it is useful to collate some broad observations from my journal notes and video data on how participants used the new tools introduced. This is done in relation dimensions of complexity exposed in research on educational coding tools. -->
 
 
-### Summary and link to next chapter/s
+<!-- ### Summary and link to next chapter/s -->
 
 **Synthesis effect of UMC + collection of GDPS on agency**
 
@@ -683,8 +649,8 @@ In addition, design  affordances here as a form of delegated agency.
 Authorial Agency in this learning process was present via the input of participants in the overall design of the program.
 
 
+**Summary and link to next chapter/s**
 
-**Signposting**
 
 This chapter has dealt with the evolution of design in initial phases and responses to learner experience to resolve tensions. A key focus of this chapter has been  barriers to computer coding and use of particular software. I have explored alignment with the results research from the constructionist school.
 
