--- a/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-10-5-Design.md_toc.md
@@ -12,48 +12,17 @@
             tools](#c1---contradictions-involving-the-use-of-game-programming-and-asset-authoring-tools)
             -   [Using a starter game template within a code
                 playground](#using-a-starter-game-template-within-a-code-playground)
-            -   [Creating key affordances](#creating-key-affordances)
-                -   [Use of game assets](#use-of-game-assets)
-            -   [Resolution of C1 / LINK](#resolution-of-c1-link)
         -   [C2 - Contradictions associated with project navigation and
             use of
             documentation](#c2---contradictions-associated-with-project-navigation-and-use-of-documentation)
-            -   [Description of contradictions related to
-                documentation](#description-of-contradictions-related-to-documentation)
             -   [Forms of Documentation which addressed
                 contradictions](#forms-of-documentation-which-addressed-contradictions)
-                -   [Quick Start Cards](#quick-start-cards)
-                -   [Structuring instructional tutorial resources and
-                    code
-                    snippets](#structuring-instructional-tutorial-resources-and-code-snippets)
             -   [Resolution of C2](#resolution-of-c2)
         -   [C3 - Responding to tensions and barriers in cultural
             aspects of the game making
             activity](#c3---responding-to-tensions-and-barriers-in-cultural-aspects-of-the-game-making-activity)
             -   [Social coding processes](#social-coding-processes)
-                -   [Remixing, peer learning, and choice of starting
-                    template MERGE
-                    UP](#remixing-peer-learning-and-choice-of-starting-template-merge-up)
-                -   [Use of side missions to encourage varied creative
-                    practices](#use-of-side-missions-to-encourage-varied-creative-practices)
     -   [Chapter Discussion](#chapter-discussion)
-        -   [On Affordances, DS and DBR ( using the argumentative
-            grammar of 3GAT /
-            DBR)](#on-affordances-ds-and-dbr-using-the-argumentative-grammar-of-3gat-dbr)
-            -   [Comparing to Microworlds & constructionist design
-                priniciples](#comparing-to-microworlds-constructionist-design-priniciples)
-            -   [The potentially awesome impact of lifting the lid on
-                authentic technologies
-                -](#the-potentially-awesome-impact-of-lifting-the-lid-on-authentic-technologies--)
-        -   [Rising to the concrete - the emergence of GDPs as a germ
-            cell of
-            activity](#rising-to-the-concrete---the-emergence-of-gdps-as-a-germ-cell-of-activity)
-            -   [Synthesis effect of UMC + collection of
-                GDPS](#synthesis-effect-of-umc-collection-of-gdps)
-            -   [and what this synthesis has to say about participant
-                agency - OR MOVE
-                UP?](#and-what-this-synthesis-has-to-say-about-participant-agency---or-move-up)
-        -   [Link to next chapter/s](#link-to-next-chapters)
     -   [Parking Lot](#parking-lot)
         -   [Perhaps reintegrate above](#perhaps-reintegrate-above)
             -   [MOVED LINK - Applying activity theory to surface
@@ -62,3 +31,4 @@
                 facilitator/s](#moved-link---applying-activity-theory-to-surface-contradictions-and-design-tensions-experienced-by-participants-and-facilitators)
             -   [Notes from vignette](#notes-from-vignette)
             -   [Notes before C1](#notes-before-c1)
+            -   [Dropped from Discussion](#dropped-from-discussion)
