--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -51,26 +51,12 @@ title: 5. Exploration of the Formative Learning Design Process
 
 This chapter contains some headings in draft form. These will be replaced with introductory sentences when structure is stable.
 
-## Research Questions - To discuss...
+## Research Questions Nov 2024
 
-**2023 question one version**
 
-1. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
-
-**Research Questions - July 2024**
-
-1. What contradictions arose in participation in this research's game coding processes and what pedagogical tools and processes are available to address these contradictions?
-2. How can game design patterns support the development of computational fluency in novices?
-3. How can learners build agency in an evolving community of game makers?
-
-**New - later 2024 question version / proposal**
-
-1. How can game design patterns support the development of computational fluency in novices?
-2. How can learners build agency in an evolving community of game makers?
-
-Just drop one? Or bring back a more general question which the lit review also answers?
-
-3. What pedagogical tools and processes are available to support novices to overcome barriers to participation in game coding processes?
+    1. What contradictions arose in participation in this research’s game coding processes and were they addressed?
+    2. How can game design patterns support the development of computational fluency in novices?
+    3. How can learners build agency in an evolving community of game makers?
 
 <!--
 *A note on style*
