--- a/_posts/thesis_chapters/2024-10-5-Design.md
+++ b/_posts/thesis_chapters/2024-10-5-Design.md
@@ -54,7 +54,7 @@ This chapter contains some headings in draft form. These will be replaced with i
 ## Research Questions Nov 2024
 
 
-    1. What contradictions arose in participation in this research’s game coding processes and were they addressed?
+    1. What contradictions arose in participation in this research’s game coding processes and how were they addressed?
     2. How can game design patterns support the development of computational fluency in novices?
     3. How can learners build agency in an evolving community of game makers?
 
